--- a/latex/main.tex
+++ b/latex/main.tex
@@ -38,11 +38,11 @@ Siden udgivelsen af Fitts' originale artikel der beskrev hans forsøg, og udledt
 
 I 1992 udgav Scott MacKenzie artiklen \cite{mackenzie1992}, hvori han beskrev en ny variant af Fitts' Lov. Denne variant udviser samme form som Shannon's Sætning \cite{goldberg2015} og er siden blevet accepteret som den mest udbredte \cite{guiard2011}. MacKenzie udførte beregninger på data fra allerede udførte forsøg og viste at hans formulering ville passe bedre på de tidligere indsamlede data. På trods af, at MacKenzie viste at hans formulering passede bedst på data fra tidligere forsøg, så har både \cite{drewes2010} og \cite{goldberg2015} vist at alle fire formuleringer ikke nødvendigvis passer til alle tilfælde af opgavers sværhedsgrader. Specielt noterede \cite{goldberg2015} at det kom an på sværhedsgraden, hvilken formulering der skulle bruges. MacKenzies var bedst at bruge ved opgaver med høje sværhedsgrader, mens Meyers viste sig at være bedst anvendelig ved opgaver med lave sværhedsgrader.
 
-På trods af at MacKenzie's variant er den mest udbredte, så står det ofte forskere frit for at bruge den variant de finder bedst passende\cite{drewes2010}. Der bliver i forskellige artikler gjort brug af den variation af Fitts' lov som passer den indsamlede data bedst. Dette fører til at forskere skal retfærdiggøre deres valg af Fitts' lov, fremfor at bruge tiden på deres egentlige forskningsområde\cite{drewes2010}. Der er behov for en standard model af Fitts' lov, da det vil gøre det nemmere for både forskere, undervisere og studerende indenfor menneske-datamaskine interaktion. Forskere, fordi de ikke skal bruge tid på at validere og retfærdiggøre deres valg af Fitts' Lov. Undervisere, fordi de kan undervise i Fitts' lov uden at være usikre på hvad der er rigtigt. Studerende, fordi det vil give dem mulighed for at studere området mere dybdegående.
+På trods af at MacKenzie's variant er den mest udbredte, så står det ofte forskere frit for at bruge den variant de finder bedst passende\cite{drewes2010}. Der bliver i forskellige artikler gjort brug af den variant af Fitts' lov som passer den indsamlede data bedst. Dette fører til at forskere skal retfærdiggøre deres valg af Fitts' lov, fremfor at bruge tiden på deres egentlige forskningsområde\cite{drewes2010}. Der er behov for en standardmodel af Fitts' lov, da det vil gøre det nemmere for både forskere, undervisere og studerende inden for menneske-datamaskine interaktion. Forskere, fordi de ikke skal bruge tid på at validere og retfærdiggøre deres valg af Fitts' Lov. Undervisere, fordi de kan undervise i Fitts' lov uden at være usikre på hvad der er rigtigt. Studerende, fordi det vil give dem mulighed for at studere området mere dybdegående.
 
-Der er generelt, indenfor videnskabelige felter, vigtigt at reproducere og dokumentere tidligere udførte forsøg, da det hjælper med at se om et resultat kan genfindes og beskrive hvor resultaterne holder og fejler. Det hjælper også med at fjerne studier, hvor resultaterne ikke kan valideres både under ens og lidt anderledes forhold\cite{hornbaek2014}. Der har indenfor menneske-datamaskine interaktion i høj grad været normalt ikke at udføre genskabelse af forsøg. \cite{hornbaek2014} beskriver at kun $3\%$ af 891 artikler fra forskellige publikationer reproducere tidligere eksperimenter. Denne mangel på reproducering af forsøg, er især relevant ved større opdagelser inden for menneske-datamaskine interaktion, hvilket Fitts' Lov i høj grad kan siges at være.
+Det er generelt, inden for videnskabelige felter, vigtigt at reproducere og dokumentere tidligere udførte forsøg, da det hjælper med at se om et resultat kan genfindes og beskrive hvor resultaterne holder og fejler. Det hjælper også med at fjerne studier, hvor resultaterne ikke kan valideres både under ens og lidt anderledes forhold\cite{hornbaek2014}. Det har inden for menneske-datamaskine interaktion i høj grad været normalt ikke at udføre genskabelse af forsøg. \cite{hornbaek2014} beskriver at kun $3\%$ af 891 artikler fra forskellige publikationer reproducerer tidligere eksperimenter. Denne mangel på reproducering af forsøg, er især relevant ved større opdagelser inden for menneske-datamaskine interaktion, hvilket Fitts' lov i høj grad kan siges at være.
 
-Vi vil i denne rapport udføre to forsøg hvis formål er at indsamle og analysere data for bevægelser, for at sammenligne forskellige varianter af Fitts' Lov. Vores forsøg vil være en genskabelse af forsøg udført af \cite{accot1997, goldberg2015}, og vil bestå af et kontrolleret laboratorieeksperiment, og et ukontrolleret onlineeksperiment. Det kontrollerede laboratorieeksperiment er medtaget for at sikre en kontrolleret indsamling af data, som derved kan vise om vi også kan benytte data indsamlet fra vores onlineeksperiment. Vi vil i vores analyse både analysere dataen i forhold til allerede de fire omtalte variationer af Fitts' lov. Dertil vil vi analysere bevægelsesbaner, fart og hastighed, for at se om Fitts' lov kan optimeres.\\
+Vi vil i denne rapport udføre to forsøg hvis formål er at indsamle og analysere data for bevægelser, for at sammenligne forskellige varianter af Fitts' lov. Vores forsøg vil være en genskabelse af forsøg udført af \cite{accot1997, goldberg2015}, og vil bestå af et kontrolleret laboratorieeksperiment, og et ukontrolleret onlineeksperiment. Det kontrollerede laboratorieeksperiment er medtaget for at sikre en kontrolleret indsamling af data, som derved kan vise om vi også kan benytte data indsamlet fra vores onlineeksperiment. Vi vil i vores analyse både analysere dataen i forhold til de fire allerede omtalte variationer af Fitts' lov. Dertil vil vi analysere bevægelsesbaner, fart og hastighed, for at se om Fitts' lov kan optimeres.\\
 
 \addcontentsline{toc}{section}{Forventninger til læseren}
 \section*{Forventninger til læseren}
