SÅ ER VI SNART FÆRDIGE

--- a/latex/appendices.tex
+++ b/latex/appendices.tex
@@ -158,7 +158,6 @@ For at crowdsource vores eksperiment har vi delt følgende tekst:
 \end{minipage}
 
 %-- Kvalitativ analyse --%
-\newpage
 \chapter{Testdeltageres bevægelsesbaner}
 \label{sec:movementlines}
 \begin{minipage}{\textwidth}
@@ -237,9 +236,79 @@ For at crowdsource vores eksperiment har vi delt følgende tekst:
 	\label{fig:kvaliativ_persons_3}
 \end{minipage}
 
+%-- Hastighedsprofiler --%
+\chapter{Fartprofiler for 8 testdeltagere}
+\label{sec:fart-profil}
+\begin{minipage}{\textwidth}
+	\begin{minipage}{0.5\linewidth}
+		\includegraphics[width=\linewidth]{images/plots/plot_speed_individual_45}
+	\end{minipage}
+		\begin{minipage}{0.5\linewidth}
+		\includegraphics[width=\linewidth]{images/plots/plot_speed_individual_77}
+	\end{minipage}
+	\begin{minipage}{0.5\linewidth}
+		\includegraphics[width=\linewidth]{images/plots/plot_speed_individual_113}
+	\end{minipage}
+	\begin{minipage}{0.5\linewidth}
+		\includegraphics[width=\linewidth]{images/plots/plot_speed_individual_160}
+	\end{minipage}
+	\captionof{figure}{Fartprofiler for testdeltager 45,77,113 og 160's opgave 20,23,8 og 20. Den tilbagelagte distance ud af $x$-aksen og farten ud af $y$-aksen}
+	\label{fig:kvaliativ_persons_3}
+\end{minipage}
+
+\begin{minipage}{\textwidth}
+	\begin{minipage}{0.5\linewidth}
+		\includegraphics[width=\linewidth]{images/plots/plot_speed_individual_166}
+	\end{minipage}
+		\begin{minipage}{0.5\linewidth}
+		\includegraphics[width=\linewidth]{images/plots/plot_speed_individual_225}
+	\end{minipage}
+	\begin{minipage}{0.5\linewidth}
+		\includegraphics[width=\linewidth]{images/plots/plot_speed_individual_239}
+	\end{minipage}
+	\begin{minipage}{0.5\linewidth}
+		\includegraphics[width=\linewidth]{images/plots/plot_speed_individual_263}
+	\end{minipage}
+	\captionof{figure}{Fartprofiler for testdeltager 166,225,239 og 263's opgave 20,23,8 og 20. Den tilbagelagte distance ud af $x$-aksen og farten ud af $y$-aksen}
+	\label{fig:kvaliativ_persons_3}
+\end{minipage}
+
+\begin{minipage}{\textwidth}
+	\begin{minipage}{0.5\linewidth}
+		\includegraphics[width=\linewidth]{images/plots/plot_speed_time_individual_45}
+	\end{minipage}
+		\begin{minipage}{0.5\linewidth}
+		\includegraphics[width=\linewidth]{images/plots/plot_speed_time_individual_77}
+	\end{minipage}
+	\begin{minipage}{0.5\linewidth}
+		\includegraphics[width=\linewidth]{images/plots/plot_speed_time_individual_113}
+	\end{minipage}
+	\begin{minipage}{0.5\linewidth}
+		\includegraphics[width=\linewidth]{images/plots/plot_speed_time_individual_160}
+	\end{minipage}
+	\captionof{figure}{Fartprofiler for testdeltager 45,77,113 og 160's opgave 20,23,8 og 20. Den forløbne tid ud af $x$-aksen og farten ud af $y$-aksen}
+	\label{fig:kvaliativ_persons_3}
+\end{minipage}
+
+\begin{minipage}{\textwidth}
+	\begin{minipage}{0.5\linewidth}
+		\includegraphics[width=\linewidth]{images/plots/plot_speed_time_individual_166}
+	\end{minipage}
+		\begin{minipage}{0.5\linewidth}
+		\includegraphics[width=\linewidth]{images/plots/plot_speed_time_individual_225}
+	\end{minipage}
+	\begin{minipage}{0.5\linewidth}
+		\includegraphics[width=\linewidth]{images/plots/plot_speed_time_individual_239}
+	\end{minipage}
+	\begin{minipage}{0.5\linewidth}
+		\includegraphics[width=\linewidth]{images/plots/plot_speed_time_individual_263}
+	\end{minipage}
+	\captionof{figure}{Fartprofiler for testdeltager 166,225,239 og 263's opgave 20,23,8 og 20. Den forløbne tid ud af $x$-aksen og farten ud af $y$-aksen}
+	\label{fig:kvaliativ_persons_3}
+\end{minipage}
+
 
 %-- R-kode --%
-\newpage
 \chapter{R-kode fra analyse}
 \label{sec:r-code}
 \lstinputlisting[language=R]{main.r}
