--- a/latex/main.tex
+++ b/latex/main.tex
@@ -993,15 +993,51 @@ På baggrund af de observerede tendenser har vi fundet frem til to hypoteser, so
 	\centering
 	\begin{tabular}{llllll}
 		Alder            & Køn                  & Computerspil                & Computere                    & Hånd                   & Pegeenhed            \\\hline
-		gns: \hfill24.95 & mand: \hfill90.91\%  & $<1$ time: \hfill18.18\%    & $<1$ time: \hfill0\%         & venstre: \hfill18.18\% & mus: \hfill50\%      \\
-		min: \hfill17    & kvinde: \hfill9.09\% & $1-5$ timer: \hfill27.27\%  & $1-5$ timer: \hfill0\%       & højre: \hfill81.82\%   & touchpad: \hfill50\% \\
-		max: \hfill41    &                      & $5-15$ timer: \hfill40.91\% & $5-15$ timer: \hfill0\%      &                        &                      \\
-		                 &                      & $15-40$ timer: \hfill9.09\% & $15-40$ timer: \hfill31.82\% &                        &                      \\
-		                 &                      & $>40$ timer: \hfill4.55\%   & $>40$ timer: \hfill68.18\%   &                        &
+		gns: \hfill24.9 & mand: \hfill91\%  & $<1$ time: \hfill18\%    & $<1$ time: \hfill0\%         & venstre: \hfill18\% & mus: \hfill50\%      \\
+		min: \hfill17    & kvinde: \hfill9\% & $1-5$ timer: \hfill27\%  & $1-5$ timer: \hfill0\%       & højre: \hfill82\%   & touchpad: \hfill50\% \\
+		max: \hfill41    &                      & $5-15$ timer: \hfill41\% & $5-15$ timer: \hfill0\%      &                        &                      \\
+		                 &                      & $15-40$ timer: \hfill9\% & $15-40$ timer: \hfill32\% &                        &                      \\
+		                 &                      & $>40$ timer: \hfill5\%   & $>40$ timer: \hfill68\%   &                        &
 	\end{tabular}
 	\caption{Tabel med oversigt over gennemsnitsværdier og fordeling af testpersoners valg i spørgeskemaet.}
-	\label{tab:persons_average}
+	\label{tab:sample_persons_average}
 \end{table}
+
+\begin{minipage}{\linewidth}
+\begin{minipage}{.475\linewidth}
+	\centering
+	\includegraphics[width=\linewidth]{images/plots/plot_speed_individual_140}
+	\captionof{figure}{Plot af testdeltager 248's fart i forhold til den tilbagelagte distance på opgaverne 20, 23, 8 og 22.}
+	\label{fig:speed_distance_testperson_140}
+	\end{minipage}
+	\begin{minipage}[b]{0.05\linewidth}
+	~
+	\end{minipage}
+	\begin{minipage}{.475\linewidth}
+		\centering
+		\includegraphics[width=\linewidth]{images/plots/plot_speed_individual_248}
+		\captionof{figure}{Plot af testdeltager 248's fart i forhold til den tilbagelagte distance på opgaverne 20, 23, 8 og 22.}
+		\label{fig:speed_distance_testperson_248}
+	\end{minipage}
+\end{minipage}
+
+\begin{minipage}{\linewidth}
+\begin{minipage}{.475\linewidth}
+	\centering
+	\includegraphics[width=\linewidth]{images/plots/plot_speed_time_individual_140}
+	\captionof{figure}{Plot af testdeltager 248's fart i forhold til den forløbne tid på opgaverne 20, 23, 8 og 22.}
+	\label{fig:speed_distance_testperson_140}
+	\end{minipage}
+	\begin{minipage}[b]{0.05\linewidth}
+	~
+	\end{minipage}
+	\begin{minipage}{.475\linewidth}
+		\centering
+		\includegraphics[width=\linewidth]{images/plots/plot_speed_time_individual_248}
+		\captionof{figure}{Plot af testdeltager 248's fart i forhold til den forløbne tid på opgaverne 20, 23, 8 og 22.}
+		\label{fig:speed_distance_testperson_248}
+	\end{minipage}
+\end{minipage}
 
 
 For at kunne analysere de indsamlede data, har vi valgt at lave nogle beregninger på vores data som kan bruges til at lave en kvantitativ analyse. Ud fra de indsamlede data har vi udregnet farten i de individuelle punkter i vores data, som vi har brugt til at illustrere fartudviklingen over fire tilfældigt udvalgte tests som kan ses på figur \ref{fig:plot_speed_overall}.
