--- a/latex/appendices.tex
+++ b/latex/appendices.tex
@@ -238,36 +238,43 @@ For at crowdsource vores eksperiment har vi delt følgende tekst:
 
 %-- Hastighedsprofiler --%
 \chapter{Fartprofiler for 8 testdeltagere}
-\label{sec:fart-profil}
+\label{sec:speed_plots}
 \begin{minipage}{\textwidth}
 	\begin{minipage}{0.5\linewidth}
 		\includegraphics[width=\linewidth]{images/plots/plot_speed_individual_45}
+		\captionof{figure}{Fartprofiler for testdeltager 45's opgave 20,23,8 og 20. Den tilbagelagte distance ud af $x$-aksen og farten ud af $y$-aksen}
 	\end{minipage}
 		\begin{minipage}{0.5\linewidth}
 		\includegraphics[width=\linewidth]{images/plots/plot_speed_individual_77}
+		\captionof{figure}{Fartprofiler for testdeltager 77's opgave 20,23,8 og 20. Den tilbagelagte distance ud af $x$-aksen og farten ud af $y$-aksen}
 	\end{minipage}
 	\begin{minipage}{0.5\linewidth}
 		\includegraphics[width=\linewidth]{images/plots/plot_speed_individual_113}
+		\captionof{figure}{Fartprofiler for testdeltager 113's opgave 20,23,8 og 20. Den tilbagelagte distance ud af $x$-aksen og farten ud af $y$-aksen}
 	\end{minipage}
 	\begin{minipage}{0.5\linewidth}
-		\includegraphics[width=\linewidth]{images/plots/plot_speed_individual_160}
+		\includegraphics[width=\linewidth]{images/plots/plot_speed_individual_161}
+		\captionof{figure}{Fartprofiler for testdeltager 161's opgave 20,23,8 og 20. Den tilbagelagte distance ud af $x$-aksen og farten ud af $y$-aksen}
 	\end{minipage}
-	\captionof{figure}{Fartprofiler for testdeltager 45,77,113 og 160's opgave 20,23,8 og 20. Den tilbagelagte distance ud af $x$-aksen og farten ud af $y$-aksen}
 	\label{fig:kvaliativ_persons_3}
 \end{minipage}
 
 \begin{minipage}{\textwidth}
 	\begin{minipage}{0.5\linewidth}
 		\includegraphics[width=\linewidth]{images/plots/plot_speed_individual_166}
+		\captionof{figure}{Fartprofiler for testdeltager 168's opgave 20,23,8 og 20. Den tilbagelagte distance ud af $x$-aksen og farten ud af $y$-aksen}
 	\end{minipage}
 		\begin{minipage}{0.5\linewidth}
 		\includegraphics[width=\linewidth]{images/plots/plot_speed_individual_225}
+		\captionof{figure}{Fartprofiler for testdeltager 225's opgave 20,23,8 og 20. Den tilbagelagte distance ud af $x$-aksen og farten ud af $y$-aksen}
 	\end{minipage}
 	\begin{minipage}{0.5\linewidth}
 		\includegraphics[width=\linewidth]{images/plots/plot_speed_individual_239}
+		\captionof{figure}{Fartprofiler for testdeltager 239's opgave 20,23,8 og 20. Den tilbagelagte distance ud af $x$-aksen og farten ud af $y$-aksen}
 	\end{minipage}
 	\begin{minipage}{0.5\linewidth}
 		\includegraphics[width=\linewidth]{images/plots/plot_speed_individual_263}
+		\captionof{figure}{Fartprofiler for testdeltager 263's opgave 20,23,8 og 20. Den tilbagelagte distance ud af $x$-aksen og farten ud af $y$-aksen}
 	\end{minipage}
 	\captionof{figure}{Fartprofiler for testdeltager 166,225,239 og 263's opgave 20,23,8 og 20. Den tilbagelagte distance ud af $x$-aksen og farten ud af $y$-aksen}
 	\label{fig:kvaliativ_persons_3}
@@ -276,35 +283,79 @@ For at crowdsource vores eksperiment har vi delt følgende tekst:
 \begin{minipage}{\textwidth}
 	\begin{minipage}{0.5\linewidth}
 		\includegraphics[width=\linewidth]{images/plots/plot_speed_time_individual_45}
+		\captionof{figure}{Fartprofiler for testdeltager 45's opgave 20,23,8 og 20. Den forløbne tid ud af $x$-aksen og farten ud af $y$-aksen}
 	\end{minipage}
 		\begin{minipage}{0.5\linewidth}
 		\includegraphics[width=\linewidth]{images/plots/plot_speed_time_individual_77}
+		\captionof{figure}{Fartprofiler for testdeltager 77's opgave 20,23,8 og 20. Den forløbne tid ud af $x$-aksen og farten ud af $y$-aksen}
 	\end{minipage}
 	\begin{minipage}{0.5\linewidth}
 		\includegraphics[width=\linewidth]{images/plots/plot_speed_time_individual_113}
+		\captionof{figure}{Fartprofiler for testdeltager 113's opgave 20,23,8 og 20. Den forløbne tid ud af $x$-aksen og farten ud af $y$-aksen}
 	\end{minipage}
 	\begin{minipage}{0.5\linewidth}
-		\includegraphics[width=\linewidth]{images/plots/plot_speed_time_individual_160}
+		\includegraphics[width=\linewidth]{images/plots/plot_speed_time_individual_161}
+		\captionof{figure}{Fartprofiler for testdeltager 161's opgave 20,23,8 og 20. Den forløbne tid ud af $x$-aksen og farten ud af $y$-aksen}
 	\end{minipage}
-	\captionof{figure}{Fartprofiler for testdeltager 45,77,113 og 160's opgave 20,23,8 og 20. Den forløbne tid ud af $x$-aksen og farten ud af $y$-aksen}
 	\label{fig:kvaliativ_persons_3}
 \end{minipage}
 
 \begin{minipage}{\textwidth}
 	\begin{minipage}{0.5\linewidth}
 		\includegraphics[width=\linewidth]{images/plots/plot_speed_time_individual_166}
+		\captionof{figure}{Fartprofiler for testdeltager 166's opgave 20,23,8 og 20. Den forløbne tid ud af $x$-aksen og farten ud af $y$-aksen}
 	\end{minipage}
 		\begin{minipage}{0.5\linewidth}
 		\includegraphics[width=\linewidth]{images/plots/plot_speed_time_individual_225}
+		\captionof{figure}{Fartprofiler for testdeltager 225's opgave 20,23,8 og 20. Den forløbne tid ud af $x$-aksen og farten ud af $y$-aksen}
 	\end{minipage}
 	\begin{minipage}{0.5\linewidth}
 		\includegraphics[width=\linewidth]{images/plots/plot_speed_time_individual_239}
+		\captionof{figure}{Fartprofiler for testdeltager 239's opgave 20,23,8 og 20. Den forløbne tid ud af $x$-aksen og farten ud af $y$-aksen}
 	\end{minipage}
 	\begin{minipage}{0.5\linewidth}
 		\includegraphics[width=\linewidth]{images/plots/plot_speed_time_individual_263}
+		\captionof{figure}{Fartprofiler for testdeltager 263's opgave 20,23,8 og 20. Den forløbne tid ud af $x$-aksen og farten ud af $y$-aksen}
 	\end{minipage}
 	\captionof{figure}{Fartprofiler for testdeltager 166,225,239 og 263's opgave 20,23,8 og 20. Den forløbne tid ud af $x$-aksen og farten ud af $y$-aksen}
 	\label{fig:kvaliativ_persons_3}
+\end{minipage}
+
+%-- Hastighedsprofiler --%
+\chapter{Hastighedsprofiler for 4 testdeltagere}
+\label{sec:velocity_plots}
+\begin{minipage}{\textwidth}
+	\includegraphics[width=\linewidth]{images/plots/plot_velocity_individual_45}
+	\captionof{figure}{Hastighedsprofiler for testdeltager 45's opgave 20,23,8 og 20. Vektorerne peger imod målet, og $x$ og $y$ koordinaterne er de præcise punkter på skærmen fra opgaverne.}
+\end{minipage}
+\begin{minipage}{\textwidth}
+	\includegraphics[width=\linewidth]{images/plots/plot_velocity_individual_140}
+	\captionof{figure}{Hastighedsprofiler for testdeltager 140's opgave 20,23,8 og 20. Vektorerne peger imod målet, og $x$ og $y$ koordinaterne er de præcise punkter på skærmen fra opgaverne.}
+\end{minipage}
+\begin{minipage}{\textwidth}
+	\includegraphics[width=\linewidth]{images/plots/plot_velocity_individual_161}
+	\captionof{figure}{Hastighedsprofiler for testdeltager 161's opgave 20,23,8 og 20. Vektorerne peger imod målet, og $x$ og $y$ koordinaterne er de præcise punkter på skærmen fra opgaverne.}
+\end{minipage}
+\begin{minipage}{\textwidth}
+	\includegraphics[width=\linewidth]{images/plots/plot_velocity_individual_166}
+	\captionof{figure}{Hastighedsprofiler for testdeltager 166's opgave 20,23,8 og 20. Vektorerne peger imod målet, og $x$ og $y$ koordinaterne er de præcise punkter på skærmen fra opgaverne.}
+\end{minipage}
+
+\begin{minipage}{\textwidth}
+	\includegraphics[width=\linewidth]{images/plots/plot_velocity_individual_target_45}
+	\captionof{figure}{Hastighedsprofiler for testdeltager 45's opgave 20,23,8 og 20.  $x$ og $y$ koordinaterne er de præcise punkter på skærmen fra opgaverne.}
+\end{minipage}
+\begin{minipage}{\textwidth}
+	\includegraphics[width=\linewidth]{images/plots/plot_velocity_individual_target_140}
+	\captionof{figure}{Hastighedsprofiler for testdeltager 140's opgave 20,23,8 og 20. $x$ og $y$ koordinaterne er de præcise punkter på skærmen fra opgaverne.}
+\end{minipage}
+\begin{minipage}{\textwidth}
+	\includegraphics[width=\linewidth]{images/plots/plot_velocity_individual_target_161}
+	\captionof{figure}{Hastighedsprofiler for testdeltager 161's opgave 20,23,8 og 20. $x$ og $y$ koordinaterne er de præcise punkter på skærmen fra opgaverne.}
+\end{minipage}
+\begin{minipage}{\textwidth}
+	\includegraphics[width=\linewidth]{images/plots/plot_velocity_individual_target_166}
+	\captionof{figure}{Hastighedsprofiler for testdeltager 166's opgave 20,23,8 og 20. $x$ og $y$ koordinaterne er de præcise punkter på skærmen fra opgaverne.}
 \end{minipage}
 
 
