--- a/latex/appendices.tex
+++ b/latex/appendices.tex
@@ -236,7 +236,7 @@ For at crowdsource vores eksperiment har vi delt følgende tekst:
 	\label{fig:kvaliativ_persons_3}
 \end{minipage}
 
-%-- Hastighedsprofiler --%
+%-- Fartprofiler --%
 \chapter{Fartprofiler for 8 testdeltagere}
 \label{sec:speed_plots}
 \begin{minipage}{\textwidth}
@@ -265,8 +265,8 @@ For at crowdsource vores eksperiment har vi delt følgende tekst:
 		\captionof{figure}{Fartprofiler for testdeltager 168's opgave 20,23,8 og 20. Den tilbagelagte distance ud af $x$-aksen og farten ud af $y$-aksen}
 	\end{minipage}
 		\begin{minipage}{0.5\linewidth}
-		\includegraphics[width=\linewidth]{images/plots/plot_speed_individual_225}
-		\captionof{figure}{Fartprofiler for testdeltager 225's opgave 20,23,8 og 20. Den tilbagelagte distance ud af $x$-aksen og farten ud af $y$-aksen}
+		\includegraphics[width=\linewidth]{images/plots/plot_speed_individual_226}
+		\captionof{figure}{Fartprofiler for testdeltager 226's opgave 20,23,8 og 20. Den tilbagelagte distance ud af $x$-aksen og farten ud af $y$-aksen}
 	\end{minipage}
 	\begin{minipage}{0.5\linewidth}
 		\includegraphics[width=\linewidth]{images/plots/plot_speed_individual_239}
@@ -306,8 +306,8 @@ For at crowdsource vores eksperiment har vi delt følgende tekst:
 		\captionof{figure}{Fartprofiler for testdeltager 166's opgave 20,23,8 og 20. Den forløbne tid ud af $x$-aksen og farten ud af $y$-aksen}
 	\end{minipage}
 		\begin{minipage}{0.5\linewidth}
-		\includegraphics[width=\linewidth]{images/plots/plot_speed_time_individual_225}
-		\captionof{figure}{Fartprofiler for testdeltager 225's opgave 20,23,8 og 20. Den forløbne tid ud af $x$-aksen og farten ud af $y$-aksen}
+		\includegraphics[width=\linewidth]{images/plots/plot_speed_time_individual_226}
+		\captionof{figure}{Fartprofiler for testdeltager 226's opgave 20,23,8 og 20. Den forløbne tid ud af $x$-aksen og farten ud af $y$-aksen}
 	\end{minipage}
 	\begin{minipage}{0.5\linewidth}
 		\includegraphics[width=\linewidth]{images/plots/plot_speed_time_individual_239}
@@ -326,36 +326,36 @@ For at crowdsource vores eksperiment har vi delt følgende tekst:
 \label{sec:velocity_plots}
 \begin{minipage}{\textwidth}
 	\includegraphics[width=\linewidth]{images/plots/plot_velocity_individual_45}
-	\captionof{figure}{Hastighedsprofiler for testdeltager 45's opgave 20,23,8 og 20. Vektorerne peger imod målet, og $x$ og $y$ koordinaterne er de præcise punkter på skærmen fra opgaverne.}
+	\captionof{figure}{Hastighedsprofiler for testdeltager 45's opgave 20,23,8 og 20. $x$ og $y$ koordinaterne er de præcise punkter på skærmen fra opgaverne.}
 \end{minipage}
 \begin{minipage}{\textwidth}
 	\includegraphics[width=\linewidth]{images/plots/plot_velocity_individual_140}
-	\captionof{figure}{Hastighedsprofiler for testdeltager 140's opgave 20,23,8 og 20. Vektorerne peger imod målet, og $x$ og $y$ koordinaterne er de præcise punkter på skærmen fra opgaverne.}
+	\captionof{figure}{Hastighedsprofiler for testdeltager 140's opgave 20,23,8 og 20. $x$ og $y$ koordinaterne er de præcise punkter på skærmen fra opgaverne.}
 \end{minipage}
 \begin{minipage}{\textwidth}
 	\includegraphics[width=\linewidth]{images/plots/plot_velocity_individual_161}
-	\captionof{figure}{Hastighedsprofiler for testdeltager 161's opgave 20,23,8 og 20. Vektorerne peger imod målet, og $x$ og $y$ koordinaterne er de præcise punkter på skærmen fra opgaverne.}
+	\captionof{figure}{Hastighedsprofiler for testdeltager 161's opgave 20,23,8 og 20. $x$ og $y$ koordinaterne er de præcise punkter på skærmen fra opgaverne.}
 \end{minipage}
 \begin{minipage}{\textwidth}
 	\includegraphics[width=\linewidth]{images/plots/plot_velocity_individual_166}
-	\captionof{figure}{Hastighedsprofiler for testdeltager 166's opgave 20,23,8 og 20. Vektorerne peger imod målet, og $x$ og $y$ koordinaterne er de præcise punkter på skærmen fra opgaverne.}
+	\captionof{figure}{Hastighedsprofiler for testdeltager 166's opgave 20,23,8 og 20. $x$ og $y$ koordinaterne er de præcise punkter på skærmen fra opgaverne.}
 \end{minipage}
 
 \begin{minipage}{\textwidth}
 	\includegraphics[width=\linewidth]{images/plots/plot_velocity_individual_target_45}
-	\captionof{figure}{Hastighedsprofiler for testdeltager 45's opgave 20,23,8 og 20.  $x$ og $y$ koordinaterne er de præcise punkter på skærmen fra opgaverne.}
+	\captionof{figure}{Hastighedsprofiler for testdeltager 45's opgave 20,23,8 og 20. Vektorerne peger imod målet, og $x$ og $y$ koordinaterne er de præcise punkter på skærmen fra opgaverne.}
 \end{minipage}
 \begin{minipage}{\textwidth}
 	\includegraphics[width=\linewidth]{images/plots/plot_velocity_individual_target_140}
-	\captionof{figure}{Hastighedsprofiler for testdeltager 140's opgave 20,23,8 og 20. $x$ og $y$ koordinaterne er de præcise punkter på skærmen fra opgaverne.}
+	\captionof{figure}{Hastighedsprofiler for testdeltager 140's opgave 20,23,8 og 20. Vektorerne peger imod målet, og $x$ og $y$ koordinaterne er de præcise punkter på skærmen fra opgaverne.}
 \end{minipage}
 \begin{minipage}{\textwidth}
 	\includegraphics[width=\linewidth]{images/plots/plot_velocity_individual_target_161}
-	\captionof{figure}{Hastighedsprofiler for testdeltager 161's opgave 20,23,8 og 20. $x$ og $y$ koordinaterne er de præcise punkter på skærmen fra opgaverne.}
+	\captionof{figure}{Hastighedsprofiler for testdeltager 161's opgave 20,23,8 og 20. Vektorerne peger imod målet, og $x$ og $y$ koordinaterne er de præcise punkter på skærmen fra opgaverne.}
 \end{minipage}
 \begin{minipage}{\textwidth}
 	\includegraphics[width=\linewidth]{images/plots/plot_velocity_individual_target_166}
-	\captionof{figure}{Hastighedsprofiler for testdeltager 166's opgave 20,23,8 og 20. $x$ og $y$ koordinaterne er de præcise punkter på skærmen fra opgaverne.}
+	\captionof{figure}{Hastighedsprofiler for testdeltager 166's opgave 20,23,8 og 20. Vektorerne peger imod målet, og $x$ og $y$ koordinaterne er de præcise punkter på skærmen fra opgaverne.}
 \end{minipage}
 
 
