--- a/latex/bibliography.bib
+++ b/latex/bibliography.bib
@@ -333,3 +333,30 @@
   year={2014},
   organization={ACM}
 }
+
+@book{ditlevsen2011,
+	title={Introduktion til statistik},
+	author={Ditlevsen, Susanne and S{\o}rensen, Helle},
+	year={2011},
+	edition={3}
+}
+
+@book{kolman2008,
+	title={Discrete mathemathical structures},
+	author={Kolman, Bernand and Busby, Robert and Ross, Sharon},
+	year={2008},
+	edition={6}
+}
+
+@book{soeresen2003,
+	title={Introduktion til sandsynlighedsregning},
+	author={S{\o}rensen, Michael},
+	year={2003},
+	edition={4}
+}
+
+@book{hartson2012,
+	title={The UX book: process and Guidelines for Ensuring a Quality User Experience},
+	author={Hartson, Rex and Pyla, Pardha},
+	year={2012}
+}
