--- a/latex/main.tex
+++ b/latex/main.tex
@@ -46,7 +46,7 @@ Vi vil i denne rapport udføre to forsøg hvis formål er at indsamle og analyse
 
 \addcontentsline{toc}{section}{Forventninger til læseren}
 \section*{Forventninger til læseren}
-Der stilles forventinger til læseren om matematik på gymnasielt niveau, indledende statistik \& sandsynlighed og indledende kendskab til menneske-datamaskine interaktion. Det noteres desuden at sektionen Modeludvælgelse under Analyse kun gennemgås kursorisk.
+Der stilles forventinger til læseren om indledende universitets matematik, eksempelvis \cite{kolman2008}, indledende statistik \& sandsynlighed, eksempelvis \cite{ditlevsen2011} og \cite{soerensen2003}. Endvidere forventes et indledende kendskab til menneske-datamaskine interaktion, eksempelvis \cite{hartson2012}.
 
 \addcontentsline{toc}{chapter}{Teori}
 \chapter*{Teori}
@@ -506,7 +506,7 @@ Efterfølgende har vi lukket for muligheden for at deltage i vores forsøg den 3
 
 \addcontentsline{toc}{chapter}{Analyse}
 \chapter*{Analyse}
-I dette afsnit vil vi analysere den indsamlede data ved brug af både kvantitative og kvalitative metoder. Vi vil mere præcist analysere testdeltagernes bevægelsesbaner og hastighedsprofiler.
+I dette afsnit vil vi analysere den indsamlede data ved brug af både kvantitative og kvalitative metoder. Vi vil mere præcist analysere testdeltagernes bevægelsesbaner og hastighedsprofiler. Afsnittet modeludvælgelse vil kun blive gennemgået kursorisk.
 
 Den tilsvarende R-kode som er brugt til analysen, kan findes i vores bilag.
 \addcontentsline{toc}{section}{Modeludvælgelse}
@@ -526,7 +526,7 @@ LSE er bestemt ved at finde gennemsnittet af kvadratet på afstandene fra punkte
 
 Mallow's $C_p$ kriteriet bliver beregnet ud fra LSE men inddrager også antallet af parametre i beregningen for netop at undgå overfitting. Tilsvarende gør sig gældende for AIC og BIC, de beregnes dog ved hjælp af maximum likelihood i stedet for LSE.
 
-For et givent datasæt $x$ og en tilhørende statistisk model vil likelihoodfunktionen beregne sandsynligheden for at modellens parametre $p$ vil resultere i $x$. Ved maximum likelihood findes de værdier for parametrene $p$, som maksimere likelihood funktionen. Det vil sige de værdier for parametrene $p$, som gør det observerede datasæt $x$ mest sandsynligt. Forskellen på AIC og BIC er, at BIC vægter antallet af parametre mere negativt end AIC.
+For et givent datasæt $x$ og en tilhørende statistisk model vil likelihoodfunktionen beregne sandsynligheden for, at modellens parametre $p$ vil resultere i $x$. Ved maximum likelihood findes den værdi for  $p$, som maksimerer likelihood funktionen. \textit{"Det vil sige den værdi af  $p$ der gør den observerede værdi $x$ mest sandsynlig"} \cite{ditlevsen2011} side 14. Forskellen på AIC og BIC er, at BIC vægter antallet af parametre mere negativt end AIC.
 
 Af de fire beskrevne modeller har vi valgt at bruge AIC, da det er den mest udbredte at basere sin modeludvælgelse på. Hvis vi lader $L$ være maximum likelihood-værdierne for modellens parametre og $k$ antallet af parametre, så er AIC givet ved
 \begin{align}
@@ -1011,7 +1011,7 @@ Figur \ref{fig:speed_distance_testperson_140} og \ref{fig:speed_distance_testper
 
 Grafen vil efter aftagningen foretage nul eller flere stigninger til lokale maksimum, som kan betegnes som korrigerende underbevægelser. Dette bekræfter derfor vores hypotese om, at testpersonerne har én primær underbevægelse efterfulgt af korrigerende underbevægelser, hvilket også er beskrevet tidligere i rapporten. Ydermere bemærker vi, at graferne for opgaver med høje $ID$ viser flere korrigerende underbevægelser end graferne for opgaver med lavere $ID$.
 
-Vi notere os, at graferne udviser de egenskaber for både distance og tid.
+Som tidligere nævnt i rapporten, så har de fire formuleringer af Fitts' lov et additivt led, som beskriver reaktionstiden for testdeltagerne. Disse værdier varierede fra 300 til 500 millisekunder, hvilket stemmer overens med graferne i figur \ref{fig:speed_time_testperson_140} og \ref{fig:speed_time_testperson_248}, her starter deltagerne også først efter 200 til 500 millisekunder. Bemærk, at grafen på nogle af figurerne allerede starter omkring tiden 0 og fortsætter med en fart på 0, dette skyldes, at testdeltageren har bevæget sin pegeenhed på samme tid med, at deltageren klikkede for at starte opgaven. Derved er der blevet registreret et datapunkt, dog uden, at testdeltageren egentlig er startet med at manøvrere imod målet. Udover dette så noterer vi os, at graferne udviser de samme egenskaber for både distance og tid.
 
 \begin{minipage}{\linewidth}
 \begin{minipage}{.475\linewidth}
