--- a/latex/main.tex
+++ b/latex/main.tex
@@ -1122,6 +1122,14 @@ Vi kan på baggrund af vores analyse og diskussion konkludere, at Meyers formule
 
 Welfords formulering klarer sig overordnet set dårligst, hvilket skyldes, at vores opgaver ikke er svære nok til at udelade det additive led.
 
+\addcontentsline{toc}{section}{Fremtidigt arbejde}
+\section*{Fremtidigt arbejde}
+Ved videre udarbejdelse af projektet, kunne det have været interessant at foretage en mere dybdegående analyse af hastighedsprofilerne. Ved at studere flere af testdeltagernes tilhørende vektorplots kunne der have været større grobund for at se en sammenhæng imellem dem og Fitts' lov. Endvidere ville vi gerne have haft mulighed for, at sammenligne testdeltagernes tider i forhold til flere af deres spørgeskemasvar, så som forskel på mænd og kvinder, højre eller venstre hånd og så videre.
+
+I forhold til tunnel og spiralopgaverne så ville det være naturligt at tilføje flere af denne type opgaver, for bedre at kunne undersøge om Accot og Zhai's formuleringer rent faktisk stemmer bedre overens med denne type opgaver i forhold til Fitts' lov. Hertil kunne man også godt kigge på fart og hastighedsprofiler. Blandt andet formoder vi, at navigationsopgaver har flere primære underbevægelser i stedet for kun én, hvilket går imod teorien bag de klassiske formuleringer af Fitts' lov.
+
+Med den teknologiske udvikling kunne det også være relevant at undersøge Fitts' lov i forhold til skærme med 'motion sensors'. Nærmere betegnet om forholdet imellem tiden det tager at udføre opgaven og sværhedsgraden af opgaven er det samme når man er fri for at bruge en pegeenhed eller røre ved skærmen.
+
 %\textbf{Konklusionen er afslutningen på din akademiske opgave. Her fortæller du din læser hvad du har fundet ud af i din undersøgelse/analyse, og hvorfor det er vigtigt.}
 %Konklusionen kan indeholde:
 %\begin{itemize}
