--- a/latex/main.tex
+++ b/latex/main.tex
@@ -1049,7 +1049,10 @@ Vi notere os, at graferne udviser de egenskaber for både distance og tid.
 	\end{minipage}
 \end{minipage}
 
-VEKTORPLOTS HER!
+Udover analyse af testdeltagernes fart, så har vi også valgt at lave hastighedsprofiler for fire opgaver for fire tilfældigt udvalgte personer. De fire opgaver er, ligesom fartprofilerne, opgave $20$, $23$, $8$ og $22$, da de har de laveste og højeste sværhedsgrader. Hastighedsprofilerne er lavet, både med retning mod næste punkt og med retning mod slutpunktet. Dette er gjort, for at se om der er en sammenhæng mellem hastigheden til næste punkt, eller målet, og tiden det tager at udføre en opgave. De 16 plots ses i bilag \ref{sec:velocity_plots}, mens figur \ref{fig:plot_velocity_individual} og \ref{fig:plot_velocity_individual_target} visualisere hhv. et plot med hastighedsvektorer mod næste punkt og et plot med hastighedsvektorer mod slutpunktet. Figur \ref{fig:plot_velocity_individual} og \ref{fig:plot_velocity_individual_target} er taget fra en tilfældig opgave fra en tilfældig testdeltager, udelukkende for at visualisere sådanne plots. 
+
+Vektorerne i bilag \ref{sec:velocity_plots} udviser ingen generelle tendenser. Det ser ud til at være tilfældigt hvilke vektorer som er store og hvilke som er små. Derfor kan vi ikke se nogen sammenhæng mellem hastighedsprofiler og Fitts' lov. 
+
 
 \begin{minipage}{\linewidth}
 	\begin{minipage}{.45\linewidth}
