--- a/latex/bibliography.bib
+++ b/latex/bibliography.bib
@@ -333,3 +333,14 @@
   year={2014},
   organization={ACM}
 }
+
+@article{liu2012crowdsourcing,
+  title={Crowdsourcing for usability testing},
+  author={Liu, Di and Bias, Randolph G and Lease, Matthew and Kuipers, Rebecca},
+  journal={Proceedings of the American Society for Information Science and Technology},
+  volume={49},
+  number={1},
+  pages={1--10},
+  year={2012},
+  publisher={Wiley Online Library}
+}
