--- a/latex/main.tex
+++ b/latex/main.tex
@@ -1113,7 +1113,7 @@ Vores valg af opslagssteder til det ukontrollerede forsøg kan have haft en indf
 
 Det er derimod væsentligt at se på hvilket pegeredskab testdeltagerne brugte, da der kan være forskel på tiden, når personer bruger f.eks. mus i forhold til touchpad \cite{epps1986}. I vores data brugte 160 personer mus, mens 96 brugte touchpad. På trods af at der er flest der brugte mus, så er det stadig vigtigt at huske at cirka $35\%$ brugte touchpad, hvilket ifølge \cite{epps1986} medfører et dårligere resultat.
 
-Vores testdata kom ikke kun fra Reddit, men også fra opslag på vores Facebook-væg. Dette medfører også et bias som kan være væsentligt, da det er vores familie og venner vi derved bruger. Familie og venner har ofte hørt om projektet før og kan derfor have en forventning om hvad der skal ske og hvad de burde gøre. Da både Reddit og Facebook hovedsageligt bruges af yngre personer, så vil vores målgruppe også være begrænset heraf. Vi har f.eks. kun ni testpersoner som er ældre end 40. 
+Vores testdata kom ikke kun fra Reddit, men også fra opslag på vores Facebook-væg. Dette medfører også et bias som kan være væsentligt, da det er vores familie og venner vi derved bruger. Familie og venner har ofte hørt om projektet før og kan derfor have en forventning om hvad der skal ske og hvad de burde gøre. Da både Reddit og Facebook hovedsageligt bruges af yngre personer, så vil vores målgruppe også være begrænset heraf.
 
 \addcontentsline{toc}{section}{Analyse}
 \section*{Analyse}
