--- a/latex/main.tex
+++ b/latex/main.tex
@@ -1106,8 +1106,11 @@ I vores analyse af tunnelopgaverne viste tabel \ref{tab:table_analysis_aic_tunne
 Analysen af spiralopgaverne viste, at Accot og Zhai's formulering beskrev dataene bedst, jvf. AIC værdierne fra tabel \ref{tab:table_analysis_aic_spiral}. Dette er præcis, hvad vi forventede, da deres er $ID$ er bestemt specifikt for denne type opgave. Ligesom for tunnelopgaverne gjorde vi kun brug af 4 i stedet for 16 opgaver, hvilket gør datasættet væsentligt mindre og måske endda for lille. I modsætning til tunnelopgaverne så har spiralopgavernes størrelser mere indflydelse på tiden. Hvis spiralen bliver større eller snævrere tager det længere tid for alle testdeltagerene at gennemføre. Sammenligningen med de fire originale formuleringer af Fitts' lov er dog svær at drage konklusioner ud fra. De motoriske analyser som de bygger på, med én hovedbevægelse efterfulgt af én eller flere underbevægelser er ikke tilfældet for spiralopgaven.
 
 % Diskussion af AIC
+Analysen af pegeopgaver viste, ligesom analysen af tunnelopgaverne, at Meyer's formulering tilpassede vores indsamlede data bedst, da den havde AIC-værdi på 92728.38 for alle personers pegeopgaver. Dette var 34.64 mindre end MacKenzie's formulering, som derved er den næstbedste formulering. Herefter fulgte Fitts' formulering som var 75,79 større end Meyer's formulering. Den formulering som tilpassede vores data dårligst var Welford, da den havde den højeste AIC-værdi og var 1781,96 større end Meyer's formulering. For at kunne sige at to modeller tilpasser den indsamlede data lige godt, så skal forskellen mellem dem være under to\cite{burnham2004}. Hvis de måske tilpasser den indsamlede data lige godt, så skal forskellen mellem dem være mellem fire og syv\cite{burnham2004}. Hvis de ikke tilpasser dataen lige godt, så vil forskellen ligge over 10\cite{burnham2004}. Forskellene mellem Meyer's formulering og de tre andre er alle større end 10. Vi kan derfor sige at Meyer's er den formulering som tilpasser vores data bedst, da den har den mindste AIC-værdi.
 
-Analysen af pegeopgaver viste, ligesom analysen af tunnelopgaverne, at Meyer's formulering passede bedst på vores indsamlede data. Der er dog ikke meget forskel fra denne og Fitts' og MacKenzie's. Vi mener derfor at små variationer i vores data ville kunne gøre en stor forskel for hvilken af de tre formuleringer som er bedst. Welford's formulering har væsentlig højere AIC-værdier end de tre andre og kan derfor betegnes som den dårligste af de fire. Residualgraferne giver de samme resultater som AIC-analysen. Meyer's passer bedst på vores data, tæt fulgt af Fitts' og MacKenzie's, mens Welford's passer dårligere end de andre.\\
+Vi valgte også at lave AIC analyse af alle opgaver for 10 tilfældige personer. Her var resultaterne mere varierede, men Meyer's formulering havde den laveste ved syv ud af 10 testdeltagere. MacKenzie's formulering havde den laveste ved to ud af 10 testdeltagere, mens Welford's formulering havde den laveste værdi ved en af testdeltagerne. Der var en generel tendens til at forskellene mellem Meyer's formulering, MacKenzie's formulering og Fitts' formulering lå under to, hvilket betyder at de tilpasser dataen for enkeltpersoner lige godt. Welford's var lidt mere blandet. Her var en af forskellene under to, seks var mellem to og 10 og to var over 10. Det tyder altså på at Welford's formulering på enkeltpersonerne måske tilpasser dataen lige så godt som de fire andre, men at vi ikke kan være sikre på dette.\\
+
+For at understøtte vores AIC analyse lavede vi også en analyse af residualplot. På residualplottene var det tydeligt at se at Meyer's formulering var den som tilpassede den indsamlede data bedst, da dens smoothing grafen generelt var nærmest nul-linjen og dens residualer lå mest tilfældigt omkring nul-linjen. MacKenzie's og Fitts' formulering lignede hinanden rigtig meget og vi kan derfor ikke se hvilken af dem som ville være næst- og tredjebedst. Det er dog klart udfra residualplottene, at Welfold's formulering er den som tilpasser dataen dårligst, da smoothing grafen ligger længere fra nul-linjen og residualplottene ikke ligger tilfældigt omkring nul-linjen. Residualplottene følger altså vores AIC-analyse, idet at Meyer's formulering er den bedst og Welford's er den dårligste. Det er dog svært at sige om Fitts' og MacKenzie's formulering ligger tæt nok på Meyer's til at de tilpasser dataen lige så godt, hvilket vores AIC-analyse til gengæld klart kunne svare på at de ikke gjorde for alle deltagere.\\
 
 I vores analyse fandt vi frem til værdien af $a$ og $b$ i hver af de fire formuleringer. De tre værdier af $a$ beskriver den tid det vil tage for en person at påbegynde opgaven. Denne ligger mellem cirka $400$ og $500$ millisekunder, hvilket også passer med hvad \cite{crossman1957} og \cite{welford1968} tidligere har fundet frem til. Det multiplikative led, $b$, beskriver hvor meget længere tid brugeren ville bruge på en opgave, hvis opgavens $ID$ bliver 1 større. Dette led ligger for Fitts', MacKenzie's og Meyer's omkring $150-200$, mens det for Welford's ligger omkring $300$. Grunden til at Welford's multiplikative led ligger højere er, at Welford's formulering ikke har det additive led og derfor vil den skulle stige mere, for at passe nogenlunde på vores data.\\
 
